# hsr-cards

./: .env_example  .gitignore  MANIFEST.in  README.md  example.py  pyproject.toml
.github/workflows/: publish.yml
hsr_cards/: __init__.py  client.py
hsr_cards/api/: base_api.py  endpoints.py
hsr_cards/renderer/: finction.py  moc.py  shadow.py
hsr_cards/utils/: errors.py  hsrfonts.py
src/hsr_cards/: __init__.py  client.py
src/hsr_cards/api/: base_api.py  endpoints.py
src/hsr_cards/models/: auth.py  events.py  notes.py
src/hsr_cards/renderer/: anomaly.py  banners.py  endgame.py  events.py  finction.py  moc.py  notes.py  shadow.py  stars.py  team.py
src/hsr_cards/utils/: elements.py
