[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hsr-cards"
version = "1.0.0"
description = "A library to generate Honkai Star Rail player stats cards with async support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "sora", email = "sahikast6@gmail.com"}
]
keywords = ["honkai", "star-rail", "hsr", "cards", "stats", "image-generation"]
classifiers = [
    "Development Status :: Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
]

dependencies = [
    "aiohttp>=3.8.0",
    "pillow>=9.0.0",
    "python-dotenv>=0.19.0",
    "asyncio>=3.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/MR-LORD-REX/hsr-cards"
Documentation = "https://github.com/MR-LORD-REX/hsr-cards#readme"
Repository = "https://github.com/MR-LORD-REX/hsr-cards.git"
Issues = "https://github.com/MR-LORD-REX/hsr-cards/issues"

[tool.setuptools]
packages = ["hsr_cards"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.12.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
